shelf: Adjust the order of GetShelfBackgroundType.

Use SHELF_BACKGROUND_SPLIT_VIEW when both splitview and overview are
active. The background of the shelf will also influence the radius
corner of the shelf.

Bug: 912409
Change-Id: I28643eface4a22422c24978686f7a50b01c7dba7
Reviewed-on: https://chromium-review.googlesource.com/c/1377431
Commit-Queue: Min Chen <minch@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616753}
Former-commit-id: 23d1c9d2a27fffc154593eac1c695fd041f64465